nav fully compelete. waiting for the color and design

--- a/content.html
+++ b/content.html
@@ -73,90 +73,252 @@
         </div>
         <nav class="navBar">
             <ul class="mainNav">
-                <li class="item"><a href="#">دوره‌های آموزشی</a>
-                    <ul class="subNav">
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                <li class="item"><a class="expandable" href="#">دوره‌های آموزشی</a>
+                    <ul class="CourseNav">
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a>
-                            <ul class="courseNav">
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
-                                <li><a href="#">نمونه لایه دو</a></li>
+                        <li><a href="#">نمونه دوره</a>
+                            <ul class="InnerNav">
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
+                                <li><a href="#">نمونه دوره لایه دو</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">نمونه</a></li>
-                        <li><a href="#">نمونه</a></li>
-                        <li><a href="#">نمونه</a></li>
-                        <li><a href="#">نمونه</a></li>
-                        <li><a href="#">نمونه</a></li>
-                        <li><a href="#">نمونه</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
+                        <li><a href="#">نمونه دوره</a></li>
                     </ul>
                 </li>
                 <li class="item"><a href="#">آموزش گام به گام</a></li>
-                <li class="item"><a href="#">فیلم‌های آموزشی</a></li>
-                <li class="item"><a href="#">پروژه‌ها</a></li>
-                <li class="item"><a href="#">کتابخانه</a></li>
-                <li class="item"><a href="#">کامپوننت</a></li>
-                <li class="item"><a href="#">قالب</a></li>
+                <li class="item"><a class="expandable" href="#">فیلم‌های آموزشی</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                        <li><a href="#"> نمونه فیلم</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a class="expandable" href="#">پروژه‌ها</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                        <li><a href="#"> نمونه پروژه</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a class="expandable" href="#">کتابخانه</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#"> نمونه کتاب</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a class="expandable" href="#">کامپوننت</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                        <li><a href="#"> نمونه کامپوننت</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a class="expandable" href="#">قالب</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                        <li><a href="#"> نمونه قالب</a></li>
+                    </ul>
+                </li>
                 <li class="item"><a href="#">برنامه</a></li>
-                <li class="item"><a href="#">اخبار</a></li>
+                <li class="item"><a class="expandable" href="#">اخبار</a>
+                    <ul class="CommonNav">
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                        <li><a href="#"> نمونه خبر</a></li>
+                    </ul>
+                </li>
         </nav>
         <div class="spaceRightSide">
             <span>با مجوز رسمی از سازمان فنی و حرفه‌ای کشور</span>
