numbers added to book nav part

--- a/content.html
+++ b/content.html
@@ -208,30 +208,25 @@
                 </li>
                 <li class="item"><a class="expandable" href="#">کتابخانه</a>
                     <ul class="CommonNav">
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
-                        <li><a href="#"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="22"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="5"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="232"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="71"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="40"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="20"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="53"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="3"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="0"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="22"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="7"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="11"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="19"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="5"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="63"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="98"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="112"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="30"> نمونه کتاب</a></li>
+                        <li><a href="#" data-count="22"> نمونه کتاب</a></li>
                     </ul>
                 </li>
                 <li class="item"><a class="expandable" href="#">کامپوننت</a>
