header res done for 1200px

--- a/Run.html
+++ b/Run.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="./Run/mobile-media.min.css">
    
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Responsive.css">
     <link rel="icon" href="http://tahlildadeh.ir:2626/" type="" sizes="16x16">
 </head>
 <body>
