--- a/content.html
+++ b/content.html
@@ -34,27 +34,29 @@
                 <div class="click"></div>
                 <button class="orangeButton  alt">ثبت نام</button>
             </a>
-            <div class="layer2">
-                <a href="#" class="item">
-                    <div class="img one"></div>
-                    <span>ورود اعضاء</span>
-                </a>
-                <a href="#" class="item">
-                    <div class="img two"></div>
-                    <span>صفحه نخست</span>
-                </a>
-                <a href="#" class="item">
-                    <div class="img three"></div>
-                    <span>تماس با ما</span>
-                </a>
-                <a href="#" class="item">
-                    <div class="img four"></div>
-                    <span>تقویم آموزشی</span>
-                </a>
-            </div>
-            <div class="inputWrapper">
-                <input type="text" class="mainSearch" placeholder="جستجو..." />
-                <i class="fas fa-search"></i>
+            <div class="rest">
+                <div class="layer2">
+                    <a href="#" class="item">
+                        <div class="img one"></div>
+                        <span>ورود اعضاء</span>
+                    </a>
+                    <a href="#" class="item">
+                        <div class="img two"></div>
+                        <span>صفحه نخست</span>
+                    </a>
+                    <a href="#" class="item">
+                        <div class="img three"></div>
+                        <span>تماس با ما</span>
+                    </a>
+                    <a href="#" class="item">
+                        <div class="img four"></div>
+                        <span>تقویم آموزشی</span>
+                    </a>
+                </div>
+                <div class="inputWrapper">
+                    <input type="text" class="mainSearch" placeholder="جستجو..." />
+                    <i class="fas fa-search"></i>
+                </div>
             </div>
 
         </div>
