--- a/content.html
+++ b/content.html
@@ -6,7 +6,7 @@
                 <span>021-88146330</span>
                 <div class="phone"></div>
             </div>
-            <div class="wrap">
+            <div class="wrap email">
                 <span>info@tahlildadeh.com</span>
                 <div class="envelope"></div>
             </div>
